--- a/server/.env.example
+++ b/server/.env.example
@@ -6,3 +6,6 @@ ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
 ENCRYPTION_KEY=tobemodified
+
+CLIENT_URL=http://localhost:3000
+PREVIEW_SECRET=your-secret-key
